added text for percentages

--- a/src/app/pages/vaccinesurveydashboard/vaccinesurveydashboard.page.html
+++ b/src/app/pages/vaccinesurveydashboard/vaccinesurveydashboard.page.html
@@ -22,7 +22,7 @@
           <div class="inner">
             <h3>{{totalMaleYes}} males</h3>
             <h3>{{totalFemaleYes}} females</h3>
-            <p>({{(totalYes/totalRespondents) * 100 | number:'1.0-1'}}%)</p>
+            <p>{{(totalYes/totalRespondents) * 100 | number:'1.0-1'}}% of total surveyed</p>
             <label>Said Yes</label>
           </div>
           <div class="icon">
@@ -35,7 +35,7 @@
           <div class="inner">
             <h3>{{totalMaleNo}} males</h3>
             <h3>{{totalFemaleNo}} females</h3>
-            <p>({{(totalNo/totalRespondents) * 100 | number:'1.0-1'}}%)</p>
+            <p>{{(totalNo/totalRespondents) * 100 | number:'1.0-1'}}% of total surveyed</p>
             <label>Said No</label>
           </div>
           <div class="icon">
@@ -48,7 +48,7 @@
           <div class="inner">
             <h3>{{totalMaleUndecided}} males</h3>
             <h3>{{totalFemaleUndecided}} females</h3>
-            <p>({{(totalUndecided/totalRespondents) * 100 | number:'1.0-1'}}%)</p>
+            <p>{{(totalUndecided/totalRespondents) * 100 | number:'1.0-1'}}% of total surveyed</p>
             <label>Was Undecided</label>
           </div>
           <div class="icon">
