--- a/src/app/pages/vaccinesurveydashboard/vaccinesurveydashboard.page.html
+++ b/src/app/pages/vaccinesurveydashboard/vaccinesurveydashboard.page.html
@@ -120,7 +120,7 @@
           <div class="small-box bg-secondary">
             <div class="inner">
               <h3>{{totalRespondents}}</h3>
-              <label>Overall total of respondents</label>
+              <label>Total of respondents</label>
             </div>
           </div>
         </div>
