--- a/src/app/components/vaccine-survey-reason-modal/vaccine-survey-reason-modal.component.html
+++ b/src/app/components/vaccine-survey-reason-modal/vaccine-survey-reason-modal.component.html
@@ -29,7 +29,7 @@
         </ion-item>
       </ion-radio-group>
       <ion-item [hidden]="selectedReason !== 'others'">
-        <ion-input type="text" placeholder="Enter reason" [(ngModel)]="customReason"></ion-input>
+        <ion-input type="text" placeholder="Enter reason" [(ngModel)]="customReason" (input)="textInputChange($event)"></ion-input>
       </ion-item>
     </ion-list>
     <ion-button (click)="dismissModal('cancel')">
