--- a/src/app/pages/muncitydashboard/muncitydashboard.page.html
+++ b/src/app/pages/muncitydashboard/muncitydashboard.page.html
@@ -166,6 +166,30 @@
           </div>
         </div>
        </div>
+       <div class="col-lg-12">
+        <div class="card" style="position: relative; left: 0px; top: 0px">
+          <div class="card-header">
+            <ion-title class="card-title" color="primary">
+              <i class="ion ion-stats-bars"></i>
+              Cases by Barangay
+            </ion-title>
+          </div>
+          <div class="card-body">
+            <div style="height: 400px">
+              <div
+                class="overlay"
+                *ngIf="!barChartCanvasSummaryByBarangay_loaded"
+              >
+                <img
+                  src="https://i.imgur.com/fXUIBfi.gif"
+                  alt="Loading Chart"
+                />
+              </div>
+              <canvas #barChartCanvasSummaryByBarangay></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
        <div class="col-lg-4">
         <div class="card" style="position: relative; left: 0px; top: 0px;">
         <div class="card-header">
