fix aspec ration of by barangay

--- a/src/app/pages/muncitydashboard/muncitydashboard.page.html
+++ b/src/app/pages/muncitydashboard/muncitydashboard.page.html
@@ -175,7 +175,7 @@
             </ion-title>
           </div>
           <div class="card-body">
-            <div style="height: 400px">
+            <div>
               <div
                 class="overlay"
                 *ngIf="!barChartCanvasSummaryByBarangay_loaded"
